fix z-index from buttons

--- a/vue-share-portugal/src/css/base.css
+++ b/vue-share-portugal/src/css/base.css
@@ -25,4 +25,5 @@ a,
 a:hover {
     color: transparent;
     text-decoration: none;
+    z-index: 2;
 }
