--- a/vue-share-portugal/src/css/topBar.css
+++ b/vue-share-portugal/src/css/topBar.css
@@ -11,6 +11,7 @@
     align-items: center;
     padding: 25px 25px;
     transition: 0.4s;
+    z-index: 2;
 }
 
 .top-button img {
